@@ -19,8 +19,8 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -35,6 +35,7 @@ public class LoginServiceImpl implements LoginUseCase {
     private final PasswordEncoder passwordEncoder;
     private final AuthenticationAttemptService attemptService;
     private final OrganizationContextService organizationContextService;
+    private final SecurityAuditService securityAuditService;
 
     @Override
     @Transactional
@@ -43,6 +44,7 @@ public class LoginServiceImpl implements LoginUseCase {
 
         String identifier = command.email();
 
+        // 1. Verificar rate limiting
         if (attemptService.isBlocked(identifier)) {
             long remainingMinutes = attemptService.getBlockTimeRemainingMinutes(identifier);
             log.warn("Login bloqueado por rate limiting: {}. Tiempo restante: {} minutos",
@@ -53,67 +55,163 @@ public class LoginServiceImpl implements LoginUseCase {
 
         try {
             Email email = new Email(command.email());
-            OrganizationId organizationId = findOrganizationByEmail(email);
-            
-            Organization organization = organizationRepository.findById(organizationId)
-                    .orElseThrow(() -> new ResourceNotFoundException("Organización no encontrada para ID: " + organizationId.getValue()));
-            organizationContextService.validateOrganizationIsActive(organization);
 
-            UserAccount userAccount = userAccountRepository.findByEmail(organizationId, email)
-                    .orElseThrow(() -> new IllegalArgumentException("Credenciales inválidas"));
-
-            User user = userAccount.getUser();
-
-            if (!organizationContextService.userBelongsToOrganization(user, organizationId)) {
-                throw new IllegalArgumentException("Usuario no pertenece a esta organización");
+            // 2. NUEVO: Intentar login como usuario del sistema (superadmin) primero
+            Optional<UserAccount> systemUserOpt = userAccountRepository.findSystemUserByEmail(email);
+            if (systemUserOpt.isPresent()) {
+                log.debug("Email {} corresponde a un usuario del sistema", email.value());
+                return authenticateSystemUser(systemUserOpt.get(), command.password(), identifier);
             }
 
-            if (!passwordEncoder.matches(command.password(), user.getPasswordHash())) {
-                log.warn("Contraseña incorrecta para usuario: {}", command.email());
-                attemptService.recordFailedAttempt(identifier);
-                throw new IllegalArgumentException("Credenciales inválidas");
-            }
-
-            validateAccountStatus(user);
-
-            attemptService.clearFailedAttempts(identifier);
-
-            String accessToken = jwtTokenProvider.generateAccessToken(userAccount, organization.getSubdomain());
-            String refreshToken = jwtTokenProvider.generateRefreshToken(userAccount);
-
-            refreshTokenRepository.saveRefreshToken(
-                    refreshToken,
-                    user.getId(),
-                    jwtTokenProvider.getRefreshTokenExpiration().atZone(java.time.ZoneId.systemDefault()).toInstant().toEpochMilli()
-            );
-
-            AuthenticationResponseDTO.UserAuthInfoDTO userInfo = buildUserAuthInfo(user, organization);
-
-            log.info("Login exitoso para usuario: {} en organización: {}",
-                    command.email(), organization.getSubdomain());
-
-            return new AuthenticationResponseDTO(
-                    accessToken,
-                    refreshToken,
-                    jwtTokenProvider.getAccessTokenExpiration(),
-                    jwtTokenProvider.getRefreshTokenExpiration(),
-                    userInfo
-            );
+            // 3. Si no es usuario del sistema, continuar con flujo normal de organización
+            log.debug("Email {} no es de usuario del sistema, buscando organización", email.value());
+            return authenticateOrganizationUser(email, command.password(), identifier);
 
         } catch (IllegalArgumentException | IllegalStateException e) {
-            if (!"Demasiados intentos fallidos".startsWith(e.getMessage())) {
+            // Registrar intento fallido para errores de autenticación
+            if (!e.getMessage().startsWith("Demasiados intentos fallidos")) {
                 attemptService.recordFailedAttempt(identifier);
+                
+                // Auditar login fallido
+                securityAuditService.logLoginFailure(
+                    command.email(),
+                    getClientIpAddress(),
+                    getUserAgent(),
+                    e.getMessage()
+                );
             }
             throw e;
         }
     }
 
     /**
+     * Autentica usuarios del sistema (super admins).
+     */
+    private AuthenticationResponseDTO authenticateSystemUser(UserAccount userAccount, String password, String identifier) {
+        log.debug("Autenticando usuario del sistema");
+
+        User user = userAccount.getUser();
+
+        // Validar contraseña
+        if (!passwordEncoder.matches(password, user.getPasswordHash())) {
+            log.warn("Contraseña incorrecta para usuario del sistema: {}", user.getEmail().value());
+            attemptService.recordFailedAttempt(identifier);
+            throw new IllegalArgumentException("Credenciales inválidas");
+        }
+
+        // Validar estado de la cuenta
+        validateAccountStatus(user);
+
+        // Limpiar intentos fallidos tras login exitoso
+        attemptService.clearFailedAttempts(identifier);
+
+        // Generar tokens (SIN información de organización)
+        String accessToken = jwtTokenProvider.generateAccessToken(userAccount, "system"); // Subdomain especial para sistema
+        String refreshToken = jwtTokenProvider.generateRefreshToken(userAccount);
+
+        // Guardar refresh token
+        refreshTokenRepository.saveRefreshToken(
+                refreshToken,
+                user.getId(),
+                jwtTokenProvider.getRefreshTokenExpiration().atZone(java.time.ZoneId.systemDefault()).toInstant().toEpochMilli()
+        );
+
+        // Construir respuesta (SIN información de organización)
+        AuthenticationResponseDTO.UserAuthInfoDTO userInfo = buildSystemUserAuthInfo(user);
+
+        // Auditar login exitoso
+        securityAuditService.logLoginSuccess(
+            user.getId(),
+            user.getOrganizationId(),
+            user.getEmail().value(),
+            getClientIpAddress(),
+            getUserAgent()
+        );
+
+        log.info("Login exitoso para usuario del sistema: {}", user.getEmail().value());
+
+        return new AuthenticationResponseDTO(
+                accessToken,
+                refreshToken,
+                jwtTokenProvider.getAccessTokenExpiration(),
+                jwtTokenProvider.getRefreshTokenExpiration(),
+                userInfo
+        );
+    }
+
+    /**
+     * Autentíca usuarios de organizaciones (flujo original).
+     */
+    private AuthenticationResponseDTO authenticateOrganizationUser(Email email, String password, String identifier) {
+        // Buscar organización por email
+        OrganizationId organizationId = findOrganizationByEmail(email);
+
+        // Buscar organización por ID
+        Organization organization = organizationRepository.findById(organizationId)
+                .orElseThrow(() -> new ResourceNotFoundException("Organización no encontrada para ID: " + organizationId.getValue()));
+        organizationContextService.validateOrganizationIsActive(organization);
+
+        // Buscar usuario por email dentro de la organización
+        UserAccount userAccount = userAccountRepository.findByEmail(organizationId, email)
+                .orElseThrow(() -> new IllegalArgumentException("Credenciales inválidas"));
+
+        User user = userAccount.getUser();
+
+        // Validar contexto organizacional
+        if (!organizationContextService.userBelongsToOrganization(user, organizationId)) {
+            throw new IllegalArgumentException("Usuario no pertenece a esta organización");
+        }
+
+        // Validar contraseña
+        if (!passwordEncoder.matches(password, user.getPasswordHash())) {
+            log.warn("Contraseña incorrecta para usuario: {}", email.value());
+            attemptService.recordFailedAttempt(identifier);
+            throw new IllegalArgumentException("Credenciales inválidas");
+        }
+
+        // Validar estado de la cuenta
+        validateAccountStatus(user);
+
+        // Limpiar intentos fallidos tras login exitoso
+        attemptService.clearFailedAttempts(identifier);
+
+        // Generar tokens
+        String accessToken = jwtTokenProvider.generateAccessToken(userAccount, organization.getSubdomain());
+        String refreshToken = jwtTokenProvider.generateRefreshToken(userAccount);
+
+        // Guardar refresh token
+        refreshTokenRepository.saveRefreshToken(
+                refreshToken,
+                user.getId(),
+                jwtTokenProvider.getRefreshTokenExpiration().atZone(java.time.ZoneId.systemDefault()).toInstant().toEpochMilli()
+        );
+
+        // Construir respuesta
+        AuthenticationResponseDTO.UserAuthInfoDTO userInfo = buildUserAuthInfo(user, organization);
+
+        // Auditar login exitoso
+        securityAuditService.logLoginSuccess(
+            user.getId(),
+            organizationId,
+            user.getEmail().value(),
+            getClientIpAddress(),
+            getUserAgent()
+        );
+
+        log.info("Login exitoso para usuario: {} en organización: {}",
+                email.value(), organization.getSubdomain());
+
+        return new AuthenticationResponseDTO(
+                accessToken,
+                refreshToken,
+                jwtTokenProvider.getAccessTokenExpiration(),
+                jwtTokenProvider.getRefreshTokenExpiration(),
+                userInfo
+        );
+    }
+
+    /**
      * Busca la organización asociada a un email utilizando el índice global de emails.
-     * 
-     * @param email El email a buscar
-     * @return El ID de la organización asociada al email
-     * @throws ResourceNotFoundException si no se encuentra ninguna organización para el email
      */
     private OrganizationId findOrganizationByEmail(Email email) {
         log.debug("Buscando organización por email: {}", email.value());
@@ -146,16 +244,45 @@ public class LoginServiceImpl implements LoginUseCase {
         }
     }
 
-    private AuthenticationResponseDTO.UserAuthInfoDTO buildUserAuthInfo(User user, Organization organization) {
+    /**
+     * Construye información de autenticación para usuarios del sistema.
+     */
+    private AuthenticationResponseDTO.UserAuthInfoDTO buildSystemUserAuthInfo(User user) {
         Set<Role> roles = user.getRoles();
         List<String> roleNames = roles.stream()
                 .map(Role::getName)
-                .collect(Collectors.toList());
+                .toList();
 
         List<String> permissions = roles.stream()
                 .flatMap(role -> role.getPermissions().stream())
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
+
+        // Para usuarios del sistema, NO hay información de organización
+        return new AuthenticationResponseDTO.UserAuthInfoDTO(
+                user.getId().getValue(),
+                user.getName().getFullName(),
+                user.getEmail().value(),
+                user.getAccountStatus().name(),
+                null, // Sin organización para usuarios del sistema
+                roleNames,
+                permissions
+        );
+    }
+
+    /**
+     * Construye información de autenticación para usuarios de organizaciones.
+     */
+    private AuthenticationResponseDTO.UserAuthInfoDTO buildUserAuthInfo(User user, Organization organization) {
+        Set<Role> roles = user.getRoles();
+        List<String> roleNames = roles.stream()
+                .map(Role::getName)
+                .toList();
+
+        List<String> permissions = roles.stream()
+                .flatMap(role -> role.getPermissions().stream())
+                .distinct()
+                .toList();
 
         AuthenticationResponseDTO.OrganizationInfoDTO orgInfo =
                 new AuthenticationResponseDTO.OrganizationInfoDTO(
@@ -173,5 +300,23 @@ public class LoginServiceImpl implements LoginUseCase {
                 roleNames,
                 permissions
         );
+    }
+
+    /**
+     * Obtiene la dirección IP del cliente desde el contexto de la request.
+     */
+    private String getClientIpAddress() {
+        // TODO: Implementar extracción de IP desde HttpServletRequest
+        // Por ahora retornamos un placeholder
+        return "unknown";
+    }
+
+    /**
+     * Obtiene el User-Agent del cliente desde el contexto de la request.
+     */
+    private String getUserAgent() {
+        // TODO: Implementar extracción de User-Agent desde HttpServletRequest
+        // Por ahora retornamos un placeholder
+        return "unknown";
     }
 }
